refactor: replace `Math.min`/`Math.max` clamping logic with `RXMath.clamp` across multiple classes
- Unified and replaced clamping logic with `RXMath.clamp`, improving code consistency and reuse.
- Updated imports and adjusted related references to utilize the shared utility method.