@@ -1,5 +1,7 @@
 package io.github.leewyatt.rxcontrols.animation.page;
 
+import io.github.leewyatt.rxcontrols.utils.RXMath;
+
 import javafx.animation.Animation;
 import javafx.animation.Interpolator;
 import javafx.animation.KeyFrame;
@@ -117,7 +119,7 @@ public class AnimCascade extends PageAnimationBase {
      * @param staggerFactor the stagger factor (0.0–0.95)
      */
     public void setStaggerFactor(double staggerFactor) {
-        this.staggerFactor = Math.max(0, Math.min(0.95, staggerFactor));
+        this.staggerFactor = RXMath.clamp(staggerFactor, 0.0, 0.95);
     }
 
     /**
@@ -259,7 +261,7 @@ public class AnimCascade extends PageAnimationBase {
             double delay = (strips.length > 1)
                     ? (double) orderIdx / (strips.length - 1) * staggerFactor
                     : 0;
-            double localP = Math.max(0, Math.min(1, (p - delay) / fallDuration));
+            double localP = RXMath.clamp((p - delay) / fallDuration, 0.0, 1.0);
 
             double easedP = interpolator.interpolate(0.0, 1.0, localP);
 
