@@ -1,5 +1,7 @@
 package io.github.leewyatt.rxcontrols.animation.page;
 
+import io.github.leewyatt.rxcontrols.utils.RXMath;
+
 import javafx.animation.Animation;
 import javafx.animation.Interpolator;
 import javafx.animation.KeyFrame;
@@ -92,7 +94,7 @@ public class AnimMelt extends PageAnimationBase {
      * @param staggerFactor the stagger factor (0.0–0.95)
      */
     public void setStaggerFactor(double staggerFactor) {
-        this.staggerFactor = Math.max(0, Math.min(0.95, staggerFactor));
+        this.staggerFactor = RXMath.clamp(staggerFactor, 0.0, 0.95);
     }
 
     /**
@@ -229,7 +231,7 @@ public class AnimMelt extends PageAnimationBase {
             // Backward: edges first (small delay), center last (large delay)
             double normalizedOrder = forward ? distFromCenter : (1.0 - distFromCenter);
             double delay = normalizedOrder * staggerFactor;
-            double localP = Math.max(0, Math.min(1, (p - delay) / fallDuration));
+            double localP = RXMath.clamp((p - delay) / fallDuration, 0.0, 1.0);
 
             // Apply easing
             double easedP = interpolator.interpolate(0.0, 1.0, localP);
