@@ -1,5 +1,7 @@
 package io.github.leewyatt.rxcontrols.animation.page;
 
+import io.github.leewyatt.rxcontrols.utils.RXMath;
+
 import javafx.animation.Animation;
 import javafx.animation.Interpolator;
 import javafx.animation.KeyFrame;
@@ -99,7 +101,7 @@ public class AnimSplit extends PageAnimationBase {
      * @param staggerFactor the stagger factor (0.0–0.95)
      */
     public void setStaggerFactor(double staggerFactor) {
-        this.staggerFactor = Math.max(0, Math.min(0.95, staggerFactor));
+        this.staggerFactor = RXMath.clamp(staggerFactor, 0.0, 0.95);
     }
 
     /**
@@ -241,7 +243,7 @@ public class AnimSplit extends PageAnimationBase {
             // Stagger: center strips start first, edges last
             double distFromCenter = Math.abs(i - center) / center;
             double delay = distFromCenter * staggerFactor;
-            double localP = Math.max(0, Math.min(1, (p - delay) / slideDuration));
+            double localP = RXMath.clamp((p - delay) / slideDuration, 0.0, 1.0);
             double easedP = interpolator.interpolate(0.0, 1.0, localP);
 
             // Alternating directions: even strips one way, odd the other
