@@ -8,6 +8,7 @@ import io.github.leewyatt.rxcontrols.RXListVisibleRange;
 import io.github.leewyatt.rxcontrols.ScrollAlignment;
 import io.github.leewyatt.rxcontrols.event.RXListViewActionEvent;
 import io.github.leewyatt.rxcontrols.internal.RXIndexedSelectionMutationGuard;
+import io.github.leewyatt.rxcontrols.utils.RXMath;
 import javafx.beans.value.ChangeListener;
 import javafx.collections.ListChangeListener;
 import javafx.collections.ObservableList;
@@ -417,7 +418,7 @@ public class RXListViewSkin<T> extends RXSkinBase<RXListView<T>> {
         }
         int index = control.getPendingScrollIndex();
         if (index >= 0) {
-            int clamped = Math.max(0, Math.min(index, itemCount - 1));
+            int clamped = RXMath.clamp(index, 0, itemCount - 1);
             // Clear only when the request was actually applied. On a zero-height pass
             // scrollToIndex cannot compute geometry and returns false; keeping the
             // request armed lets the first sized pass honor it.
