@@ -159,7 +159,7 @@ final class RXListViewport<T> extends RXVirtualViewportBase<T, RXListCell<T>> {
         }
         // Clamp defensively (the variable-height plan indexes per-item arrays directly);
         // the sole caller already clamps, but this keeps the method safe on its own.
-        int clamped = Math.max(0, Math.min(index, plan.itemCount() - 1));
+        int clamped = RXMath.clamp(index, 0, plan.itemCount() - 1);
         int visualRow = plan.visualRowOfItem(clamped);
         RXListRowPlan.RowInfo info = plan.rowInfo(visualRow);
         double maxScroll = Math.max(0.0, plan.contentHeight() - viewportHeight);
